[package]
name = "blank_project"
version = "0.1.0"
authors = ["Pulsar Developer <dev@pulsar-engine.com>"]
edition = "2021"
description = "A Pulsar game project with custom types and blueprints"
license = "MIT"
repository = "https://github.com/your-org/blank_project"
keywords = ["game", "engine", "pulsar-native"]
categories = ["game-engines", "multimedia", "graphics"]
readme = "README.md"

[dependencies]
pulsar_std = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev="e67992fcad90421ea1c748a28ef4085f16c064c5" }
bevy = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
